--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_channel.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/sceyt_color_background"
-    tools:context=".presentation.components.channel_info.edit.ChannelEditFragment">
+    tools:context=".presentation.components.edit_channel.EditChannelFragment">
 
     <com.sceyt.chatuikit.presentation.custom_views.CustomToolbar
         android:id="@+id/toolbar"
@@ -26,7 +26,7 @@
             android:id="@+id/layoutDetails"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingHorizontal="16dp"
+            android:paddingHorizontal="8dp"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.sceyt.chatuikit.presentation.custom_views.AvatarView
@@ -45,9 +45,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:background="@drawable/sceyt_bg_underline"
                 android:hint="@string/sceyt_hint_channel_subject"
                 android:inputType="textCapSentences"
+                android:paddingHorizontal="8dp"
                 android:paddingVertical="15dp"
                 android:textColor="@color/sceyt_color_text_primary"
                 android:textColorHint="@color/sceyt_color_text_footnote"
@@ -56,12 +56,20 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/avatar" />
 
+            <View
+                android:id="@+id/subjectDivider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginHorizontal="8dp"
+                android:background="@color/sceyt_color_border"
+                app:layout_constraintTop_toBottomOf="@+id/tvSubject" />
+
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/tvDescription"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/sceyt_bg_underline"
                 android:hint="@string/sceyt_about"
+                android:paddingHorizontal="8dp"
                 android:paddingVertical="15dp"
                 android:textColor="@color/sceyt_color_text_primary"
                 android:textColorHint="@color/sceyt_color_text_footnote"
@@ -70,10 +78,19 @@
                 app:layout_constraintStart_toStartOf="@+id/tvSubject"
                 app:layout_constraintTop_toBottomOf="@+id/tvSubject" />
 
+            <View
+                android:id="@+id/aboutDivider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginHorizontal="8dp"
+                android:background="@color/sceyt_color_border"
+                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/uriPrefix"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layoutDirection="ltr"
                 android:paddingVertical="15dp"
                 android:text="\@"
@@ -89,6 +106,7 @@
                 android:id="@+id/inputUri"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:background="@null"
                 android:hint="sceytchn1"
                 android:inputType="textUri"
@@ -108,9 +126,10 @@
                 tools:ignore="HardcodedText" />
 
             <View
-                android:id="@+id/uriUnderline"
+                android:id="@+id/uriDivider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
+                android:layout_marginHorizontal="8dp"
                 android:background="@color/sceyt_color_border"
                 app:layout_constraintEnd_toEndOf="@+id/inputUri"
                 app:layout_constraintStart_toStartOf="@+id/uriPrefix"
@@ -120,6 +139,7 @@
                 android:id="@+id/uriWarning"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="8dp"
                 android:layout_marginTop="10dp"
                 android:inputType="textUri"
                 android:textColor="@color/sceyt_color_error"
@@ -128,7 +148,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/uriUnderline"
+                app:layout_constraintTop_toBottomOf="@+id/uriDivider"
                 tools:text="@string/sceyt_the_url_exist_title"
                 tools:visibility="visible" />
 
@@ -137,7 +157,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                app:constraint_referenced_ids="uriPrefix,inputUri,uriUnderline"
+                app:constraint_referenced_ids="uriPrefix,inputUri,uriDivider"
                 tools:visibility="visible" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -151,7 +171,6 @@
         android:layout_margin="16dp"
         android:clickable="false"
         android:src="@drawable/sceyt_ic_save"
-        android:tint="@color/sceyt_color_on_primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
