Improve ButtonStyle. Add buttonStyle in EditChannelS

--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_channel.xml
@@ -45,6 +45,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
+                android:background="@null"
                 android:hint="@string/sceyt_hint_channel_subject"
                 android:inputType="textCapSentences"
                 android:paddingHorizontal="8dp"
@@ -68,6 +69,7 @@
                 android:id="@+id/tvDescription"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:background="@null"
                 android:hint="@string/sceyt_about"
                 android:paddingHorizontal="8dp"
                 android:paddingVertical="15dp"
