--- a/SceytChatUiKit/src/main/res/layout/sceyt_bottom_sheet_media_picker.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_bottom_sheet_media_picker.xml
@@ -39,22 +39,20 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true">
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <com.sceyt.chatuikit.presentation.custom_views.CustomFloatingActonButton
             android:id="@+id/btnNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:background="@drawable/sceyt_bg_circle"
-            android:backgroundTint="@color/sceyt_color_accent"
-            android:elevation="2dp"
             android:padding="16dp"
-            android:tint="@color/sceyt_color_on_primary"
-            app:iconTint="@color/sceyt_color_on_primary"
+            app:elevation="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/sceyt_ic_arrow_next" />
+            tools:background="@drawable/sceyt_bg_circle"
+            tools:backgroundTint="@color/sceyt_color_accent"
+            tools:src="@drawable/sceyt_ic_arrow_next" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/counter"
