--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_image_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_image_message.xml
@@ -11,7 +11,7 @@
         android:id="@+id/selectView"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:clickable="false"
+        android:background="@null"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
