--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_picker_video.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_picker_video.xml
@@ -24,7 +24,8 @@
         android:layout_height="24dp"
         android:layout_margin="7dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:button="@drawable/sceyt_ic_unchecked_state" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvDuration"
