--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_image_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_image_message.xml
@@ -9,7 +9,8 @@
         android:id="@+id/selectView"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:background="@null"
+        android:background="@android:color/transparent"
+        android:clickable="false"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
