--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -30,8 +30,8 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/sceyt_item_input_image_attachment" />
 
-    <FrameLayout
-        android:id="@+id/frameLayoutMessageActions"
+    <com.sceyt.chatuikit.presentation.components.channel.input.components.MessageActionsView
+        android:id="@+id/messageActionsView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:visibility="gone"
@@ -48,7 +48,7 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayoutMessageActions" />
+        app:layout_constraintTop_toBottomOf="@+id/messageActionsView" />
 
     <View
         android:id="@+id/divider"
