--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -40,15 +40,14 @@
         app:layout_constraintTop_toBottomOf="@+id/rvAttachments"
         app:layout_goneMarginTop="0dp" />
 
-    <FrameLayout
-        android:id="@+id/frameLayoutLinkPreview"
+    <com.sceyt.chatuikit.presentation.components.channel.input.components.LinkPreviewView
+        android:id="@+id/linkPreviewView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/sceyt_color_primary"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/messageActionsView" />
+        app:layout_constraintTop_toBottomOf="@+id/messageActionsView"/>
 
     <View
         android:id="@+id/divider"
@@ -63,7 +62,7 @@
         android:layout_height="wrap_content"
         android:background="@color/sceyt_color_primary"
         android:paddingVertical="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayoutLinkPreview">
+        app:layout_constraintTop_toBottomOf="@+id/linkPreviewView">
 
         <com.sceyt.chatuikit.presentation.components.channel.input.mention.MentionSupportEditText
             android:id="@+id/messageInput"
