--- a/SceytChatUiKit/src/main/res/layout/sceyt_bottom_sheet_media_picker.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_bottom_sheet_media_picker.xml
@@ -59,8 +59,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="-2dp"
+            android:layout_marginEnd="-2dp"
             android:background="@drawable/sceyt_bg_gallery_counter"
-            android:elevation="2dp"
+            android:elevation="8dp"
             android:includeFontPadding="false"
             android:maxLength="3"
             android:paddingHorizontal="6dp"
