--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_image.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_image.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="1dp">
+    android:layout_margin="1dp">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/fileImage"
