Fix issue to toolbar icons color in ForwardActivity.kt and ShareableActivity.kt. Fix issue to show checkbox in SelectableUserViewHolder.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_select_user.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_select_user.xml
@@ -5,10 +5,11 @@
     android:layout_height="wrap_content"
     android:paddingHorizontal="12dp">
 
-    <com.sceyt.chatuikit.presentation.custom_views.CircleCheckBox
+    <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/checkbox"
-        android:layout_width="22dp"
-        android:layout_height="22dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:background="@android:color/transparent"
         android:clickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
