--- a/SceytChatUiKit/src/main/res/layout/sceyt_custom_toolbar.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_custom_toolbar.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toStartOf="@+id/tvTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/sceyt_ic_arrow_back" />
+        tools:srcCompat="@drawable/sceyt_ic_arrow_back" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
