Add possibility to customise Ui components when they are using in many places in app.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="MessagesListView">
+        <!-- View id -->
+        <attr name="android:id" format="reference" />
+
         <attr name="sceytUiMessagesListBackgroundColor" format="reference|color" />
         <attr name="sceytUiMessagesListEmptyStateLayout" format="reference" />
         <attr name="sceytUiMessagesListEmptyStateSelfChannelLayout" format="reference" />
