--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message_input_view.xml
@@ -2,6 +2,9 @@
 <resources>
 
     <declare-styleable name="MessageInputView">
+        <!-- View id -->
+        <attr name="android:id" format="reference" />
+
         <attr name="sceytUiMessageInputBackgroundColor" format="reference|color" />
         <attr name="sceytUiMessageInputTextInputBackgroundColor" format="reference|color" />
         <attr name="sceytUiMessageInputMentionUsersListBackgroundColor" format="reference|color" />
