--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_search_input_view.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_search_input_view.xml
@@ -2,6 +2,9 @@
 <resources>
 
     <declare-styleable name="SearchChannelInputView">
+        <!-- View id-->
+        <attr name="android:id" format="reference" />
+
         <attr name="sceytUiSearchChannelInputBackgroundColor" format="reference|color" />
         <attr name="sceytUiSearchChannelInputCornerRadius" format="dimension" />
         <!-- Border-->
