--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_channels.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_channels.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="ChannelListView">
+        <!--View id -->
+        <attr name="android:id" format="reference" />
 
         <!--Background color channel list view-->
         <attr name="sceytUiChannelListBackgroundColor" format="reference|color" />
