--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_notes_with_bachgriund_layers.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_notes_with_bachgriund_layers.xml
@@ -1,6 +1,6 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/backgroundLayer">
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <solid android:color="@color/sceyt_color_accent" />
         </shape>
 
