--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_channels.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_channels.xml
@@ -166,6 +166,25 @@
             <flag name="italic" value="2" />
         </attr>
 
+        <!-- Channel avatar style  -->
+        <attr name="sceytUiChannelListAvatarBackgroundColor" format="reference|color" />
+
+        <attr name="sceytUiChannelListAvatarTextColor" format="reference" />
+        <attr name="sceytUiChannelListAvatarTextSize" format="dimension" />
+        <attr name="sceytUiChannelListAvatarTextFont" format="reference" />
+        <attr name="sceytUiChannelListAvatarTextStyle">
+            <flag name="normal" value="0" />
+            <flag name="bold" value="1" />
+            <flag name="italic" value="2" />
+        </attr>
+
+        <attr name="sceytUiChannelListAvatarShape">
+            <flag name="circle" value="0" />
+            <flag name="rounded" value="1" />
+        </attr>
+        <attr name="sceytUiChannelListAvatarCornerRadius" format="dimension" />
+
+
         <!-- Channel link text color -->
         <attr name="sceytUiChannelListLinkTextColor" format="reference|color" />
 
