--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_deleted_user.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_deleted_user.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <solid android:color="#D0D8E3" />
             <size
                 android:width="40dp"
