--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_messages_list_header_view.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_messages_list_header_view.xml
@@ -26,6 +26,22 @@
         </attr>
         <attr name="sceytUiMessagesListHeaderSubTitleTextFont" format="reference" />
 
+        <!-- Avatar style -->
+        <attr name="sceytUiMessagesListHeaderAvatarBackgroundColor" format="reference|color" />
+        <attr name="sceytUiMessagesListHeaderAvatarTextColor" format="reference|color" />
+        <attr name="sceytUiMessagesListHeaderAvatarTextSize" format="dimension" />
+        <attr name="sceytUiMessagesListHeaderAvatarTextFont" format="reference" />
+        <attr name="sceytUiMessagesListHeaderAvatarTextStyle">
+            <flag name="normal" value="0" />
+            <flag name="bold" value="1" />
+            <flag name="italic" value="2" />
+        </attr>
+        <attr name="sceytUiMessagesListHeaderAvatarShape">
+            <flag name="circle" value="0" />
+            <flag name="rounded" value="1" />
+        </attr>
+        <attr name="sceytUiMessagesListHeaderAvatarCornerRadius" format="dimension" />
+
         <!-- Search input style-->
         <attr name="sceytUiMessagesListHeaderSearchInputBackgroundColor" format="reference|color" />
         <attr name="sceytUiMessagesListHeaderSearchInputCornerRadius" format="dimension" />
